--- a/game.html
+++ b/game.html
@@ -2,13 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>endGame</title>
+    <title>p5-empty-project</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <script src="index.js" type="text/javascript"></script>
+    <script src="game.js" type="text/javascript"></script>
+    <script src="letters-arrays.js" type="text/javascript"></script>
+    <script src="letters-generation.js" type="text/javascript"></script>
+    <script src="interaction.js" type="text/javascript"></script>
+    <script src="clock_score.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         window.history.forward();
