--- a/theend.html
+++ b/theend.html
@@ -8,7 +8,7 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <script src="index.js" type="text/javascript"></script>
+    <script src="theend.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         window.history.forward();
