--- a/tutorial.html
+++ b/tutorial.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>endGame</title>
+    <title>p5-empty-project</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <script src="index.js" type="text/javascript"></script>
+    <script src="tutorial.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         window.history.forward();
