--- a/index.html
+++ b/index.html
@@ -2,22 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pacific Trash Island</title>
+    <title>Pacific Trash Vortex</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
     <script src="index.js" type="text/javascript"></script>
-
-    <script type="text/javascript">
-        window.history.forward();
-        function noBack()
-        {
-            window.history.forward();
-        }
-    </script>
-    <body onLoad="noBack();" onpageshow="if (event.persisted) noBack();" onUnload="">
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Vollkorn" rel="stylesheet">
 
