--- a/game.html
+++ b/game.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Pacific Trash Vortex</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
 
+    <link rel="icon" href="assets/pticon.ico">
+
+    <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
