--- a/tutorial.html
+++ b/tutorial.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pacific Trash Island</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
+    <title>Pacific Trash Vortex</title>
 
+    <link rel="icon" href="assets/pticon.ico">
+
+    <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
