--- a/world.html
+++ b/world.html
@@ -10,7 +10,7 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <script src="theend.js" type="text/javascript"></script>
+    <script src="world.js" type="text/javascript"></script>
 
     <script type="text/javascript">
         window.history.forward();
