--- a/readmore.html
+++ b/readmore.html
@@ -93,7 +93,7 @@
              <div class="row" style="margin-top:50px; margin-bottom:100px;">
 
                  <div class="col-md-12 text-center">
-                     <a href="index.html"><button id="play" class="btn1" style="height:60px; width:175px;">BACK</button></a>
+                     <a href="index.html"><button id="play" class="btn1" style=" font-family: Lato; height:60px; width:175px;">BACK</button></a>
                 </div>
              </div>
 
